Name:                hm2viewer
Version:             0.0.0
Synopsis:            wow m2 model viewer
Description:         a rewritten of wowmodelviewer in haskell
License:             BSD3
Author:              Wu Jiasen
Maintainer:          starocean (dot) wx (at) gmail (dot) com
Homepage:            http://recursive.in
Stability:           Experimental
Category:            Graphics
cabal-version:       >= 1.2
Build-Type:          Simple

Executable hm2viewer
  main-is:             main.hs
  build-depends:       base, array, containers, bytestring, mtl, transformers, filepath, binary, data-binary-ieee754, fclabels, vector-space, pcre-light, OpenGL, OpenGLRaw, GLUT, GLURaw, gtk, gtkglext, template-haskell, hmatrix, hdds, hm2, filepath, directory, filemanip, text
